# CanYouCheat

Ai_code/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
Ai_code/app/: main.py  startup.py
backend/src/: app.js  server.js
backend/src/services/: aiService.js
