[project]
name = "canyoucheat"
version = "0.1.0"
requires-python = ">=3.10,<3.12"  # This allows 3.10 and 3.11, but excludes 3.12
dependencies = [
    "fastapi==0.122.0",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "opencv-python-headless==4.8.1.78",
    "numpy==1.23.5",
    "Pillow==10.0.1",
    "mtcnn==0.1.1",
    "deepface==0.0.96",
    "tensorflow-cpu==2.12.0",
    "keras==2.12.0",
    "ultralytics==8.3.232",
    "scikit-image==0.21.0",
    "matplotlib==3.7.2"
]
